# smallworld

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.ci  Dockerfile.deps  Dockerfile.testdeps  README.NWBT.md  README.md  README.panda_tests.md  SPDX.spdx  \  about.html  aflplusplus.nix  constraints.txt  contributing.html  flake.nix  genindex.html  index.html  install.sh  make_panda_tests.py  objects.inv  overrides.nix  pull-request.yml  py-modindex.html  pyghidra.nix  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: about.doctree  contributing.doctree  environment.pickle  index.doctree
.doctrees/concepts/: index.doctree
.doctrees/getting_started/: harnessing-a-simple-program.doctree  index.doctree  smallworld-at-a-glance.doctree
.doctrees/reference/: index.doctree  smallworld.analyses.doctree  smallworld.doctree  smallworld.emulators.doctree  smallworld.exceptions.doctree  smallworld.extern.ctypes.doctree  smallworld.hinting.doctree  smallworld.logging.doctree  smallworld.platforms.doctree  smallworld.state.cpus.doctree  smallworld.state.doctree  smallworld.state.memory.code.doctree  smallworld.state.memory.doctree  smallworld.state.memory.heap.doctree  smallworld.state.memory.stack.doctree  smallworld.state.models.doctree
.doctrees/tutorial/: fuzzing.doctree  index.doctree  local-types-and-the-heap.doctree  mapping-memory.doctree
.github/ISSUE_TEMPLATE/: 1-bug-report.yaml  2-feature-request.yaml  3-question.yaml
.github/workflows/: auto-format.yml  ci.yml  commit.yml  container.yml  cron.yml  pr-title.yml  pull-request.yml  push-to-main.yml  push.yml  push_to_main.yaml  release.yml  rtos-build.yml  tag.yml  toolchains.yml  update_flake.yml
_sources/: index.rst.txt
_sources/getting_started/: harnessing-a-simple-program.rst.txt
_sources/reference/: smallworld.analyses.rst.txt  smallworld.extern.ctypes.rst.txt  smallworld.hinting.rst.txt  smallworld.platforms.rst.txt  smallworld.state.cpus.rst.txt  smallworld.state.memory.heap.rst.txt  smallworld.state.memory.stack.rst.txt
ci/: flake.nix
concepts/: index.html
concepts/analyses/: colorizer.html  coverage-frontier.html  crash-triage.html  index.html  trace-execution.html
concepts/emulators/: angr.html  ghidra.html  index.html  interface.html  panda.html  unicorn.html
concepts/state/: cpu.html  index.html  machine.html  values.html
demo/: demo.py  env.py  manual_state.py  ui.py
docs/: about.rst  conf.py  contributing.rst  index.rst
docs/concepts/: hinting.rst  index.rst
docs/getting_started/: harnessing-a-simple-program.rst  index.rst  smallworld-at-a-glance.rst
docs/reference/: emulators.rst  hinting.rst  index.rst  initializers.rst  smallworld.analyses.rst  smallworld.emulators.rst  smallworld.exceptions.rst  smallworld.initializers.rst  smallworld.logging.rst  smallworld.platform.rst  smallworld.rst  (+6 more)
examples/: angr_generic.py  angr_nwbt.py  angr_stack.py  angr_state.py  angr_struct.py  basic_harness.py  elf.py  emulator.py  executor.py  hinting.py  hinting.save.py  nix-harness.py  single_step.py  taint_harness.py
getting_started/: harnessing-a-simple-program.html  index.html  smallworld-at-a-glance.html
nix/: README.md  aflplusplus-packages.nix  panda-packages.nix  python-packages.nix  runtime-support.nix
nix/styxafl-src/: Cargo.toml  pyproject.toml
nix/styxafl-src/src/: lib.rs
reference/: index.html  smallworld.analyses.html  smallworld.emulators.html  smallworld.exceptions.html  smallworld.extern.ctypes.html  smallworld.hinting.html  smallworld.html  smallworld.logging.html  smallworld.platforms.html  smallworld.state.cpus.html  smallworld.state.html  smallworld.state.memory.code.html  smallworld.state.memory.heap.html  smallworld.state.memory.html  smallworld.state.memory.stack.html  smallworld.state.models.html
scripts/: generate_pcode_cpu.py  install_unicornafl.sh
smallworld/: __init__.py  __main__.py  analysis.py  ctypes.py  elf.py  emulator.py  exceptions.py  executable.py  executor.py  ghidra.py  helpers.py  hinting.py  initializer.py  initializers.py  instruction.py  instructions.py  logging.py  platform.py  platforms.py  smallworld.py  state.py  tui.py  unicorn_exceptions.py  utils.py
tests/: .gitignore  Makefile  README.md  afl_fuzz.py  arch_coverage.sh  asm_wrapper.sh  basic_harness.py  branch.aarch64.angr.py  branch.aarch64.py  branch.amd64.angr.py  branch.angr.py  branch.armel.py  branch.armel.s  branch.armhf.py  branch.mips.angr.py  branch.mips.py  branch.mips.s  branch.mips64el.angr.py  branch.mipsel.angr.py  branch.ppc.angr.py  branch.ppc.s  branch.ppc64.s  branch.py  branch.riscv64.s  branch.s  branch_0.py  branch_1.py  call.aarch64.angr.py  call.aarch64.s  call.amd64.py  call.angr.py  call.armel.angr.py  call.armel.py  call.armhf.angr.py  call.mips.angr.py  call.mips.py  call.mips.s  call.mips64.s  call.mips64el.angr.py  call.mipsel.angr.py  (+165 more)
toolchains/: .gitignore  README.md  compile_gcc.sh
tutorial/: fuzzing.html  index.html  local-types-and-the-heap.html  mapping-memory.html
unicornafl/: derivation.nix  flake.nix
unicornafl-build/: default.nix
unicornafl-flake/: flake.nix
(+3851 files in other folders)
