[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smallworld-re"
version = "2.0.1"
description = "An emulation stack tracking library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [
  { name = "MIT Lincoln Laboratory" }, 
  { email = "smallworld@ll.mit.edu" },
]

dependencies = [
  "angr==9.2.137",
  "capstone==5.0.3",
  "jsons==1.6.3",
  "lief==0.14.1",
  "pyhidra==1.3.0", # pip-compile does not pin pyhidra in constraints.txt for some reason
  "pypcode==3.0",
  "unicorn==2.0.1.post1",
]

[project.urls]
Homepage = "https://github.com/smallworld-re/smallworld"
Issues = "https://github.com/smallworld-re/smallworld/issues"

[project.optional-dependencies]
development = [
  "black",
  "isort",
  "flake8",
  "mypy",
  "pip-tools",
  "pre-commit",
  "sphinx",
  "sphinxcontrib-programoutput",
  "jupyterlab",
  "notebook",
  "timeout-decorator",
]

[project.scripts]
smallworld = "smallworld.__main__:main"

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = ["LICENSE.txt"]

[tool.setuptools.packages.find]
include = ["smallworld*"]

