[project]
name = "smallworld-re"
version = "2.0.2"
description = "An emulation stack tracking library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = "==3.12.12"
license = { file = "LICENSE.txt" }
authors = [
   { name = "MIT Lincoln Laboratory" }, 
   { email = "smallworld@ll.mit.edu" },
]
urls = { Homepage = "https://github.com/smallworld-re/smallworld", Issues = "https://github.com/smallworld-re/smallworld/issues" }
dependencies = [
    "angr>=9.2.192",
    "black[jupyter]>=25.11.0",
    "capstone>=5.0.3",
    "jsons>=1.6.3",
    "lief>=0.17.2",
    "pyghidra>=3.0.0",
    "pypcode>=3.0",
    "setuptools>=80.9.0",
    "unicorn>=2.1.3",
    "pycparser>=2.18,<3.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=23.11.0",
    "flake8>=6.1.0",
    "isort>=5.13.2",
    "jupyterlab>=4.4.9",
    "mypy>=1.7.1",
    "notebook>=7.4.7",
    "pip-tools>=7.3.0",
    "pre-commit>=3.5.0",
    "sphinx>=7.1.2",
    "sphinxcontrib-programoutput>=0.17",
    "timeout-decorator>=0.5.0",
]

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = ["LICENSE.txt"]

[tool.setuptools.packages.find]
include = ["smallworld*"]
